<resources>
    <string name="app_name">NMLab1OscarReviews</string>
    <string name="best_picture">Best Picture</string>
    <string name="best_actor">Best Actor</string>
    <string name="best_actress">Best Actress</string>
    <string name="film_editing">Film Editing</string>
    <string name="visual_effects">Visual Effects</string>
    <string name="category_of_nomination">Category of Nomination</string>
    <string name="nominee">Nominee</string>
    <string name="review">Review</string>
    <string name="send_review">Send Review</string>
    <string name="anonymous">Anonymous</string>
    <string name="current_user">Current User:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="username">Your Username</string>
    <string name="password">Enter Password</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login_header">Login Settings</string>
    <string name="font_header">General Settings</string>
    <string name="backgroundcolor">Change background color</string>
    <string name="backgroudcolor_summary">Background color summary</string>
    <string name="font_size">Font Size</string>
</resources>
