<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/login_header">

        <EditTextPreference

            app:key="username_prefs"
            app:title="@string/username"
            app:useSimpleSummaryProvider="true"
            android:singleLine="true"
            android:selectAllOnFocus="true"


            />

        <EditTextPreference
            app:key="password_prefs"
            app:title="@string/password"
            app:useSimpleSummaryProvider="true"

            android:singleLine="true"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/font_header">
        <ListPreference android:key="backgroundcolor_pref"
            android:title="@string/backgroundcolor"
            android:summary="@string/backgroudcolor_summary"
            android:entries="@array/color_options"
            android:entryValues="@array/color_option_values"
            android:dialogTitle="@string/backgroundcolor"
            android:defaultValue="Green"
            />
        <SeekBarPreference
            android:key="fontsize_pref"
            android:title="@string/font_size"
            android:max="32"
            android:defaultValue="8"
            />


    </PreferenceCategory>


</PreferenceScreen>
