<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#7AE883"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_user" />

        <TextView
            android:id="@+id/activity_post_reviewer_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anonymous" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nominee" />

            <EditText
                android:id="@+id/activity_post_nominee_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:labelFor="@id/activity_post_nominee_edittext"
                tools:text="Nominee Name" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/activity_post_review_edittext"
                android:text="@string/review" />

            <EditText
                android:id="@+id/activity_post_review_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:singleLine="false"
                tools:text="Review" />

            <Button
                android:id="@+id/activity_post_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_review" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_of_nomination" />

            <RadioGroup
                android:id="@+id/activity_post_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/activity_post_film_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/best_picture" />

                <RadioButton
                    android:id="@+id/activity_post_actor_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/best_actor" />

                <RadioButton
                    android:id="@+id/activity_post_actress_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/best_actress" />

                <RadioButton
                    android:id="@+id/activity_post_editing_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/film_editing" />

                <RadioButton
                    android:id="@+id/activity_post_effects_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/visual_effects" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>